# awesome-youtube-captioner

./: .gitignore  README.md  app.py  main.py  pyproject.toml  vercel.json  yt_downloader.py
awesome_youtube_captioner/: __init__.py  transcriber.py
src/: transcriber.py
templates/: index.html
